Fix form fields overflow in mobile devices

--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ h1 {
 input[type=text] {
   font-size: 25px;
   flex: 1;
+  min-width: 0;
 }
 
 input[type=submit] {
